# rs-nfc1

./: Cargo.toml  LICENSE  README.md
examples/: detect_magic_target.rs  dl533n_cs_test_capabilities.rs  list_readers.rs  read_mrtd.rs  test_dl533n_cs.rs
src/: context.rs  device.rs  lib.rs  test.rs
