[package]
name = "nfc1"
version = "0.6.1"
description = "High-level safe Rust bindings for libnfc."
authors = ["Alexander Sagen <alexander@sagen.me>"]
repository = "https://github.com/alexrsagen/rs-nfc1"
readme = "README.md"
license = "MIT"
edition = "2021"

[features]
vendored = ["nfc1-sys/vendored"]
drivers = ["nfc1-sys/drivers"]
logging = ["nfc1-sys/logging"]
usb_logging = ["nfc1-sys/usb_logging"]
conffiles = ["nfc1-sys/conffiles"]
envvars = ["nfc1-sys/envvars"]
driver_pcsc = ["nfc1-sys/driver_pcsc"]
driver_acr122_pcsc = ["nfc1-sys/driver_acr122_pcsc"]
driver_acr122_usb = ["nfc1-sys/driver_acr122_usb"]
driver_acr122s = ["nfc1-sys/driver_acr122s"]
driver_arygon = ["nfc1-sys/driver_arygon"]
driver_pn532_i2c = ["nfc1-sys/driver_pn532_i2c"]
driver_pn532_spi = ["nfc1-sys/driver_pn532_spi"]
driver_pn532_uart = ["nfc1-sys/driver_pn532_uart"]
driver_pn53x_usb = ["nfc1-sys/driver_pn53x_usb"]
driver_pn71xx = ["nfc1-sys/driver_pn71xx"]
default_drivers = ["nfc1-sys/default_drivers"]
default = ["vendored", "drivers", "default_drivers"]

[dependencies]
nfc1-sys = { version = "^0.3.12", default-features = false }

[[example]]
name = "list_readers"
path = "examples/list_readers.rs"
required-features = []

[[example]]
name = "detect_magic_target"
path = "examples/detect_magic_target.rs"
required-features = []

[[example]]
name = "dl533n_cs_test_capabilities"
path = "examples/dl533n_cs_test_capabilities.rs"
required-features = ["driver_pn53x_usb"]